Textbox height set fixed to avoid too high textboxes.

--- a/CassandraMyAdmin/ClientApp/src/Global/css/Popup.css
+++ b/CassandraMyAdmin/ClientApp/src/Global/css/Popup.css
@@ -51,6 +51,7 @@
     color: white;
     font-size: 20px;
     padding: 10px;
+    height: 24px;
     width: 600px;
 }
 
